Agregue toda la base de datos e hice las pruebas de todas las historias de usuario en la rama. No creo que haga falta tocar nada de esta rama